# shared_comic_reader

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json  index.html  reader.html  reader.js
src/: config.rs  main.rs  sharing_service.rs  smart_cmp.rs
