[package]
name = "shared_comic_reader"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["minno"]
description = "An application for reading comics together."
readme = "README.md"
repository = "https://github.com/minno726/shared_comic_reader/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version="0.3" }
tokio = { version="1.0", features=["rt","macros"] }
hyper={ version="0.14", features=["server","client","http1","http2","tcp"] }
tungstenite={ version="0.12", default-features=false }
tokio-tungstenite={ version="0.13" }
lazy_static = "1.4.0"
serde_json = "1.0.68"
route-recognizer = "0.3.1"
urlencoding = "2.1.0"
pico-args = "0.4.2"